adding head navbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@
 
 @import "./sass/components/buttons";
 
+@import "./navbar.css";
+
 @import "./sass/layout/footer";
 @import "./sass/layout/sections";
 
