--- a/src/navbar.css
+++ b/src/navbar.css
@@ -7,7 +7,7 @@
     border-radius: 0;
     transition: border-bottom 0.2s;
     border-bottom: 0px solid #0099FF;
-    font-family: 'Lato', 'Arial', sans-serif;
+    font-family: 'Montserrat', 'Arial', sans-serif;
     background-color: rgba(255, 255, 255, 0);
     text-transform: uppercase;
     font-weight: 300;
