--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #b92b27;
-$secondary-color: #00cdac;
+$primary-color: #27b9b2;
+$secondary-color: #9d2db9;
 
 $white-color: #fff;
 
