--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,5 +16,6 @@
 
 @import "./sass/sections/about";
 @import "./sass/sections/contact";
+@import "./sass/sections/coursework";
 @import "./sass/sections/hero";
 @import "./sass/sections/projects";
